# MRI_RT

./: .gitignore  README.md  setup.cfg
mrirt/: trajectory.py  utils.py
mrirt.egg-info/: PKG-INFO
notebooks/: bart_motion_rtnlinv.ipynb
