[metadata]
name = mrirt
description = MRF tools ...
version = 0.1.dev1

[options]
python_requires = >=3.7
install_requires = \
    numpy
    pillow
    # simpleitk
    tqdm
    matplotlib
    requests
    # opencv-python
    pywavelets
    bm3d
    bm4d
    # twixtools @ git+https://github.com/pehses/twixtools.git
    twixtools @ git+https://github.com/StanRenko/twixtools.git
    # epgpy @ git+https://github.com/py-baudin/epgpy.git
    # dicomstack @ git+https://github.com/py-baudin/dicomstack.git
    machines @ git+https://github.com/py-baudin/machines.git
packages = mrirt

[options.extras_require]
cupy = cupy
# test = pytest